Mise à jour de la configuration Telegraf pour le capteur BME680, ajout d'un script Python pour la collecte des données et modification des cibles dans la configuration Prometheus.

--- a/bme680.conf
+++ b/bme680.conf
@@ -1,32 +1,23 @@
-# Configuration pour collecter les métriques du BME680 via Prometheus
-[[inputs.prometheus]]
-  ## URL à scraper
-  urls = ["http://localhost:8000/metrics"]
+[agent]
+  interval = "10s"
+  round_interval = true
+  metric_batch_size = 1000
+  metric_buffer_limit = 10000
+  collection_jitter = "0s"
+  flush_interval = "10s"
+  flush_jitter = "0s"
+  precision = ""
+  hostname = "raspberry_pi"
+  omit_hostname = false
+
+[[inputs.exec]]
+  commands = ["python3 /home/pi/sensor.py"]
+  timeout = "5s"
+  data_format = "json"
   
-  ## Intervalle de collecte des métriques 
-  interval = "30s"
-
-# Collecter les métriques système
-[[inputs.cpu]]
-  percpu = true
-  totalcpu = true
-
-[[inputs.mem]]
-
-[[inputs.disk]]
-  ignore_fs = ["tmpfs", "devtmpfs"]
-
-[[inputs.temp]]
-
-[[inputs.system]]
-
-# Envoyer les données à Prometheus
+  # Les champs seront automatiquement convertis en métriques
+  name_override = "bme680_sensor"
+  
 [[outputs.prometheus_client]]
-  ## Adresse sur laquelle le serveur Prometheus écoute
-  listen = ":9273"
-  
-  ## Chemin où les métriques seront exposées
+  listen = "0.0.0.0:9273"  # Modification ici pour écouter sur toutes les interfaces
   path = "/metrics"
-  
-  ## Expiration des métriques
-  expiration_interval = "15s"
