--- a/bme680.conf
+++ b/bme680.conf
@@ -11,7 +11,7 @@
   omit_hostname = false
 
 [[inputs.exec]]
-  commands = ["python3 /home/pi/sensor.py"]
+  commands = ["/home/j0hanj0han/code/raspberrygarden/venv/bin/python3 /home/j0hanj0han/code/raspberrygarden/sensor.py"]
   timeout = "5s"
   data_format = "json"
   
