--- a/docker-compose.arm.yml
+++ b/docker-compose.arm.yml
@@ -1,8 +1,8 @@
-version: '2.4'
+version: '3.8'
 
 services:
   prometheus:
-    image: prom/prometheus:v2.45.0-armv6
+    image: prom/prometheus:v2.37.8
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -14,12 +14,15 @@ services:
       - '--storage.tsdb.path=/prometheus'
       - '--web.console.libraries=/etc/prometheus/console_libraries'
       - '--web.console.templates=/etc/prometheus/consoles'
-      - '--storage.tsdb.retention.time=15d'
+      - '--storage.tsdb.retention.time=7d'
+      - '--storage.tsdb.retention.size=512MB'
+      - '--web.enable-lifecycle'
     restart: unless-stopped
-    mem_limit: 256M
+    mem_limit: 200M
+    cpus: 0.5
 
   grafana:
-    image: grafana/grafana-oss:8.5.0-armv6
+    image: grafana/grafana:8.5.22
     container_name: grafana
     ports:
       - "3000:3000"
@@ -30,11 +33,16 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=votre_mot_de_passe_securisé
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_HTTP_PORT=3000
+      - GF_ANALYTICS_REPORTING_ENABLED=false
+      - GF_ANALYTICS_CHECK_FOR_UPDATES=false
+      - GF_ANALYTICS_CHECK_FOR_PLUGIN_UPDATES=false
     restart: unless-stopped
-    mem_limit: 256M
+    mem_limit: 150M
+    cpus: 0.3
 
   loki:
-    image: grafana/loki:2.8.0-armv6
+    image: grafana/loki:2.6.1
     container_name: loki
     ports:
       - "3100:3100"
@@ -43,9 +51,17 @@ services:
       - ./loki/config:/etc/loki
     command: -config.file=/etc/loki/loki-config.yaml
     restart: unless-stopped
-    mem_limit: 128M
+    mem_limit: 150M
+    cpus: 0.3
+
+networks:
+  monitoring:
+    driver: bridge
 
 volumes:
   prometheus_data:
+    driver: local
   grafana_data:
+    driver: local
   loki_data:
+    driver: local
